php-deploy-v1.yml
apiVersion: v1 #K8s API version
kind: Namespace
metadata:
  name: web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app-v1
  namespace: web-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: php-first
  template:
    metadata:
      labels:
        dep: php-app-v1
        app: php-first
    spec:
      containers:
      - name: web-application-v1
        image: wood8/myk8sphp_app:latest
        ports:
        - containerPort: 80 #cause in image dockerfile expoded 80 port
---
apiVersion: v1
kind: Service
metadata: 
  name: app-service-v1
  namespace: web-app
spec:
  selector:
    app: php-first
  ports:
    - name: http
#specifies the port that the Service should listen on
      port: 8181
#specifies the port on the Pods that the Service should forward traffic to
      targetPort: 80
