php-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  namespace: web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-php-web-app.com #need to resolve ip in /etc/hosts
    http:
      paths:
      - path: /version1
        pathType: Prefix
        backend:
          service:
            name: app-service-v1
            port:
              number: 8181
      - path: /version2
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 8282
